# grafik

./: .gitignore  Cargo.toml  flake.nix  justfile
app/: Cargo.toml
app/src/: blit.wgsl  compute.wgsl  main.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
